--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,15 @@
             <artifactId>spring-cloud-gcp-logging</artifactId>
             <version>2.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>spring-cloud-gcp-starter-metrics</artifactId>
+            <version>2.0.4</version>
+        </dependency>
     </dependencies>
 
     <build>
